deploy/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bf42-stats
  namespace: bf42-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bf42-stats
  template:
    metadata:
      labels:
        app: bf42-stats
    spec:
      nodeSelector:
        kubernetes.io/hostname: bethany
      containers:
        - name: nginx
          image: localhost:30500/bf42-stats:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: stats-data
              mountPath: /mnt/data
      volumes:
        - name: stats-data
          persistentVolumeClaim:
            claimName: bf42-stats-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: bf42-stats-service
  namespace: bf42-stats
  labels:
    app: bf42-stats
spec:
  selector:
    app: bf42-stats
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: bf42-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          args:
            - redis-server
            - --appendonly
            - "yes"
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: bf42-stats
  labels:
    app: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: bf42-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: redis-commander
          image: erikdubbelboer/phpredisadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-service
  namespace: bf42-stats
  labels:
    app: redis-commander
spec:
  selector:
    app: redis-commander
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: web
