deploy/app/ui-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bfstats-ui
  namespace: bfstats-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bfstats-ui
  template:
    metadata:
      labels:
        app: bfstats-ui
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: stats
          image: dylanmunyard/bfstats-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bfstats-ui-service
  namespace: bfstats-ui
spec:
  selector:
    app: bfstats-ui
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
