deploy/app/redis-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
  namespace: bf42-stats
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`*`)
      services:
        - name: redis-service
          port: 6379

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-dev
  namespace: bf42-stats
spec:
  entryPoints:
    - redis-dev
  routes:
    - match: HostSNI(`*`)
      services:
        - name: redis-dev-service
          port: 6380

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redis-commander
  namespace: bf42-stats
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`42rediscommander.home.net`)
    kind: Rule
    services:
    - name: redis-commander-service
      port: 80
